Ingress/headless-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-to-backend-svc
  namespace: default
spec:
  type: ExternalName
  externalName: backend-svc.backend.svc.cluster.local
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
