Ingress/headless-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-to-frontend-svc
  namespace: default
spec:
  type: ExternalName
  externalName: frontend-svc.frontend.svc.cluster.local
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
