Ingress/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-back-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - k8s.frontback
    secretName: k8s-front-back-secret
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: headless-to-frontend-svc
            port:
              number: 80
  - http:
      paths:
      - path: /qna
        pathType: ImplementationSpecific
        backend:
          service:
            name: headless-to-backend-svc
            port:
              number: 80
